--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
       - name: install Qt and Qt Creator
         shell: bash
         run: |
-          pip install pyyaml requests py7zr tqdm_loggable
+          pip install pyyaml requests py7zr==0.21 tqdm_loggable
           python setup.py --export_variables
           cat env >> $GITHUB_ENV
 
