remove unused qtermwidget dependency

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt update
-          sudo apt install libgl1-mesa-dev ninja-build libqtermwidget5-0-dev libutf8proc-dev
+          sudo apt install libgl1-mesa-dev ninja-build libutf8proc-dev
 
       - name: install Windows system dependencies
         if: runner.os == 'Windows'
@@ -36,7 +36,7 @@ jobs:
 
       - name: install macOS system dependencies
         if: runner.os == 'macOS'
-        run: brew install ninja qt5
+        run: brew install ninja
 
       - name: install yaml-cpp
         shell: bash
@@ -58,20 +58,6 @@ jobs:
           pip install pyyaml requests py7zr==0.21 tqdm_loggable
           python setup.py --export_variables
           cat env >> $GITHUB_ENV
-
-      - name: install qtermwidget
-        if: runner.os == 'macOS'
-        shell: bash
-        run: |
-          git clone https://github.com/lxqt/lxqt-build-tools.git extern/lxqt-build-tools
-          cd extern/lxqt-build-tools
-          cmake -B build -GNinja -DCMAKE_BUILD_TYPE=Release -DQt5Core_DIR=$(brew --prefix qt5)/lib/cmake/Qt5Core
-          cmake --build build --target install
-          cd ../..
-          git clone https://github.com/lxqt/qtermwidget.git extern/qtermwidget
-          cd extern/qtermwidget
-          cmake -B build -GNinja -DCMAKE_BUILD_TYPE=Release -DQt5Core_DIR=$(brew --prefix qt5)/lib/cmake/Qt5Core -DQt5Widgets_DIR=$(brew --prefix qt5)/lib/cmake/Qt5Widgets -DQt5LinguistTools_DIR=$(brew --prefix qt5)/lib/cmake/Qt5LinguistTools
-          cmake --build build --target install
 
       - name: build plugin
         run: |
