generate Debian package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,4 @@ option(BUILD_ROSTERMINAL "build with an integrated ROS terminal")
 
 add_subdirectory(src/project_manager)
 
-# generate plugin archive
-set(CPACK_GENERATOR "ZIP")
-set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY OFF)
-set(CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${PROJECT_VERSION}-${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR}")
-include(CPack)
+include(packaging/cpack.cmake)
