generate DEB package in CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,28 @@ jobs:
           path: |
             ./build/ROSProjectManager-*-*-*.zip
 
+      - name: install Qt Creator DEB package
+        if: runner.os == 'Linux'
+        run: |
+          wget $(./packaging/format-deb-url.py) --directory-prefix=/tmp
+          sudo apt install /tmp/qtcreator-opensource-linux-*-*.deb
+
+      - name: generate plugin DEB package
+        if: runner.os == 'Linux'
+        run: |
+          cd build
+          cpack -G DEB
+
+      - name: upload artifact (DEB)
+        if: runner.os == 'Linux'
+        uses: actions/upload-artifact@v4
+        with:
+          name: plugin_archive_artifact_${{ matrix.config.name }}_deb
+          if-no-files-found: error
+          path: |
+            ./build/ROSProjectManager-*-*-*.deb
+            ./build/ROSProjectManager-*-*-*-dbgsym.ddeb
+
   release:
     name: create release
     if: contains(github.ref, '/tags/')
@@ -75,4 +97,4 @@ jobs:
         uses: ncipollo/release-action@v1
         id: create_release
         with:
-          artifacts: ROSProjectManager-*-*-*.zip
+          artifacts: ROSProjectManager-*-*-*.zip,ROSProjectManager-*-*-*.deb,ROSProjectManager-*-*-*-dbgsym.ddeb
