build with debug symbols on Linux (RelWithDebInfo)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,9 @@ jobs:
     strategy:
       matrix:
         config:
-          - { name: "Linux", os: ubuntu-20.04 }
-          - { name: "Windows", os: windows-latest }
-          - { name: "macOS", os: macos-14 }
+          - { name: "Linux", os: ubuntu-20.04, build: "RelWithDebInfo" }
+          - { name: "Windows", os: windows-latest, build: "Release" }
+          - { name: "macOS", os: macos-14, build: "Release" }
     steps:
       - uses: actions/checkout@v4
 
@@ -47,7 +47,7 @@ jobs:
 
       - name: build plugin
         run: |
-          cmake -B build -GNinja -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH="${{ env.QTC_PATH }};${{ env.QT_PATH }}" -DBUILD_ROSTERMINAL=OFF
+          cmake -B build -GNinja -DCMAKE_BUILD_TYPE=${{ matrix.config.build }} -DCMAKE_PREFIX_PATH="${{ env.QTC_PATH }};${{ env.QT_PATH }}" -DBUILD_ROSTERMINAL=OFF
           cmake --build build --target package
 
       - name: upload artifact
