--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt update
-          sudo apt install libgl1-mesa-dev ninja-build libutf8proc-dev
+          sudo apt install libgl1-mesa-dev ninja-build libutf8proc-dev libcups2-dev
 
       - name: install Windows system dependencies
         if: runner.os == 'Windows'
