rename the download script
In the Python ecosystem, 'setup.py' is used for packaging projects. Rename
the download scripts to avoid conflicts and confusion with Python packaging
tools.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
         shell: bash
         run: |
           pip install pyyaml requests py7zr==0.21 tqdm_loggable
-          python setup.py --export_variables
+          python install-sdk.py --export_variables
           cat env >> $GITHUB_ENV
 
       - name: build plugin
